# MSE

./: .gitignore  README.md
cpp/: CMakeLists.txt  demo.sh  run.sh
cpp/src/: main.cpp
cpp/src/collector/: LinuxMetrics.cpp
cpp/src/ui/: Dashboard.cpp
